# Building-Generative-AI-Powered-Applications-with-Python

./: README.md
module-1/BLIP-huggingface/: pyproject.toml
module-1/image_captioning/: pyproject.toml
module-1/image_captioning/image_captioning/: hello.py  image_cap.py  image_captioning_app.py  uri_image_captioning.py
module-2/create-simple-chatbot/: pyproject.toml
module-2/create-simple-chatbot/create_simple_chatbot/: app.py  chatbot.py
module-3/chatapp-with-voice-and-openai/: pyproject.toml
module-3/chatapp-with-voice-and-openai/chatapp_with_voice_and_openai/: server.py  worker.py
module-4/Business-AI-Meeting-Companion-STT/: pyproject.toml
module-4/Business-AI-Meeting-Companion-STT/business_ai_meeting_companion_stt/: simple_speech2text.py
module-5/build-a-chatbot-for-your-data/: pyproject.toml
module-5/build-a-chatbot-for-your-data/build_a_chatbot_for_your_data/: hnswlib-0.8.0-cp311-cp311-linux_x86_64.whl  worker.py
