[tool.poetry]
name = "blip-huggingface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.1"
pillow = "^11.0.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
gradio = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
