[tool.poetry]
name = "create-simple-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "==4.*"
torch = "^2.5.1"
flask = "^3.0.3"
flask-cors = "^5.0.0"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
