[tool.poetry]
name = "build-a-chatbot-for-your-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pdf2image = "^1.17.0"
chromadb = "0.3.25"
pypdf = "^5.1.0"
tiktoken = "^0.8.0"
pandas = "1.5"
langchain = "0.0.254"
atlassian-python-api = "3.36.0"
huggingface-hub = "0.16.4"
torch = "2.0.1"
sentence-transformers = "2.2.2"
instructorembedding = "1.0.0"
p4python = "2023.1.2454917"
lxml = "4.9.2"
bs4 = "0.0.1"
ibm-watson-machine-learning = "^1.0.366"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
